# thorctl

./: .gitmodules  .pre-commit-config.yaml  Dockerfile  Dockerfile.autoscaler  Dockerfile.worker  README.md  dev-requirements.in  dev-requirements.txt  requirements.in  requirements.txt  setup.cfg  setup.py
.github/actions/deploy/: action.yml
.github/workflows/: .#deploy.yml  build.yml  deploy.yml  production-deploy.yml  staging-deploy.yml  test.yml
infra/: .#build.sh  build.sh  deploy.sh  release.sh  with_conda_env.sh
infra/autoscaler/: production-cloudconfig  staging-cloudconfig  start_autoscaler.sh  update.sh
infra/workers/: Dockerfile  README.md  build.sh  push.sh  run.sh  start_worker.sh
tests/: test_compute_engine.py  test_taskqueue.py  testutils.py
tests/data/: create_dataset.py
thorcontrol/: version.py
thorcontrol/taskqueue/: client.py  compute_engine.py  jobs.py  queue.py  tasks.py  thor_subprocess.py
