[metadata]
name = thorctl
version = file: thorcontrol/version.py
author = Spencer Nelson
author_email = swnelson@uw.edu
home_page = https://github.com/spenczar/thorctl
description = Command and control for executing THOR
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD 3-Clause License
license_files = LICENSE.md
keywords = astronomy, astrophysics, space, science, asteroids, comets, solar system
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Physics

[options]
python_requires = >= 3.7
packages =
    thorcontrol
    thorcontrol.bin
    thorcontrol.bin.thorctl
include_package_data = True
setup_requires =
    setuptools >= 45
    wheel
    setuptools_scm >= 6.0
install_requires =
    thor
    pika
    google-cloud-storage>=1.39.0
    google-cloud-pubsub
    google-cloud-secret-manager
    google-api-python-client
    colorama
    paramiko

tests_require =
    pytest
    pytest-cov
    coveralls

[options.entry_points]
console_scripts =
    thorctl = thorcontrol.bin.thorctl.main:main
    run-thor-worker = thorcontrol.bin.runTHORWorker:main
    submit-thor-job = thorcontrol.bin.submitTHORJob:main

[flake8]
max_line_length = 110
max_doc_length = 110
ignore =
    W503
    E203

[isort]
profile = black

[aliases]
test=pytest

[mypy]
exclude = virtualenv*

[mypy-google.*]
ignore_missing_imports = True

[mypy-googleapiclient.*]
ignore_missing_imports = True

[mypy-pandas.*]
ignore_missing_imports = True

[mypy-pika.*]
ignore_missing_imports = True

[mypy-thor.*]
ignore_missing_imports = True
